cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_STANDARD 11)
project(radiotap)
include(FindDNET.cmake)
add_definitions("-D_BSD_SOURCE -DRADIOTAP_SUPPORT_OVERRIDES")
include_directories(/usr/local/include/)
add_library(radiotap SHARED radiotap.c)
add_library(ArpScanner SHARED ArpScanner.cpp)
add_library(Device SHARED Device.cpp)
add_library(RadiotapScanner SHARED RadiotapScanner.cpp)
set_target_properties(radiotap PROPERTIES COMPILE_FLAGS "-Wall -Wextra")
set_target_properties(ArpScanner PROPERTIES COMPILE_FLAGS "-Wall -Wextra -lpcap -lnet")
set_target_properties(Device PROPERTIES COMPILE_FLAGS "-Wall -Wextra")
set_target_properties(RadiotapScanner PROPERTIES COMPILE_FLAGS "-Wall -Wextra -lpcap")
target_link_libraries(ArpScanner pcap dnet ${DNET_LIBRARIES})
target_link_libraries(RadiotapScanner radiotap pcap Device)
install(TARGETS ArpScanner DESTINATION lib)
install(TARGETS radiotap DESTINATION lib)
install(TARGETS Device DESTINATION lib)
install(TARGETS RadiotapScanner DESTINATION lib)
install(FILES radiotap.h radiotap_iter.h ArpScanner.h Device.h RadiotapScanner.h DESTINATION include)

add_executable(pcap_radiotap pcap_radiotap.cpp)
set_target_properties(pcap_radiotap PROPERTIES
		      COMPILE_FLAGS " -v -Wall -Wextra -lpcap -lnet")
          target_link_libraries(pcap_radiotap radiotap ArpScanner Device RadiotapScanner pcap dnet ${DNET_LIBRARIES})

